# MAI-OOP-LWs

./: CMakeLists.txt  README.md
LW1/: CMakeLists.txt
LW1/include/: replacer.h
LW1/src/: main.cpp  replacer.cpp
LW1/test/: tests.cpp
